JBIDE-26170 JBIDE-18654 add jdk10 and jdk11 profiles
Signed-off-by: nickboldt <nboldt@redhat.com>